--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>BMI Calculator</title>
 </head>
 <body>
-    
+<div class="container">
+<h2>BMI Calculator</h2>
+    <form id="Form">
+        <label for="gender">Gender:</label>
+        <select id="gender" required>
+                <option value="male">Male</option>
+                <option value="Female">Female</option>
+        </select>
+        <label for="age">Age:</label>
+        <input type=""number" id="age" placeholder="Enter your age" required>
+
+        <label for=""Height">Height:</label>
+        <input type="number" id="Height" placeholder="Enter your height in cm" required>
+
+        <label for="weight">Weight:</label>
+        <input type="number" id="weight" placeholder="Enter your weight in kg" required>
+
+        <button type="submit">Calculate BMI</button>
+        </form>
+<div id="result"> </div>
+
+
+
+</div>
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
