--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <option value="Female">Female</option>
         </select>
         <label for="age">Age:</label>
-        <input type=""number" id="age" placeholder="Enter your age" required>
+        <input type="number" id="age" placeholder="Enter your age" required>
 
-        <label for=""Height">Height:</label>
+        <label for="Height">Height:</label>
         <input type="number" id="Height" placeholder="Enter your height in cm" required>
 
         <label for="weight">Weight:</label>
